--- a/index.html
+++ b/index.html
@@ -276,14 +276,27 @@
       </div>
       
       <!-- Portfolio Filter -->
-      <div data-id="portfolio-filter" class="flex justify-center mb-12 fade-in">
-        <div class="flex space-x-4 glass-effect rounded-full p-2">
-          <button data-id="filter-all" class="filter-btn active px-6 py-2 rounded-full bg-white text-black font-medium">All</button>
-          <button data-id="filter-weddings" class="filter-btn px-6 py-2 rounded-full hover:bg-gray-800 transition-colors">Weddings</button>
-          <button data-id="filter-prewedding" class="filter-btn px-6 py-2 rounded-full hover:bg-gray-800 transition-colors">Pre-Wedding</button>
-          <button data-id="filter-events" class="filter-btn px-6 py-2 rounded-full hover:bg-gray-800 transition-colors">Events</button>
-        </div>
-      </div>
+<div data-id="portfolio-filter" class="flex justify-center mb-12 fade-in">
+  <div class="flex flex-wrap justify-center gap-3 glass-effect rounded-full p-2">
+    <button data-id="filter-all"
+      class="filter-btn active px-4 sm:px-6 py-2 rounded-full bg-white text-black font-medium">
+      All
+    </button>
+    <button data-id="filter-weddings"
+      class="filter-btn px-4 sm:px-6 py-2 rounded-full hover:bg-gray-800 transition-colors">
+      Weddings
+    </button>
+    <button data-id="filter-prewedding"
+      class="filter-btn px-4 sm:px-6 py-2 rounded-full hover:bg-gray-800 transition-colors">
+      Pre-Wedding
+    </button>
+    <button data-id="filter-events"
+      class="filter-btn px-4 sm:px-6 py-2 rounded-full hover:bg-gray-800 transition-colors">
+      Events
+    </button>
+  </div>
+</div>
+
       
       <!-- Portfolio Grid -->
      <div data-id="portfolio-grid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
