--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
      <div data-id="portfolio-grid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
        <!-- Portfolio Item -->
      <div class="portfolio-item weddings relative overflow-hidden rounded-lg group">
-    <img src="r1.0.jpg.jpg" alt="Wedding Photography"
+    <img src="r1.0.jpg" alt="Wedding Photography"
          class="w-full aspect-[4/3] object-cover image-hover-effect filter grayscale">
     <div class="absolute inset-0 bg-black bg-opacity-50 opacity-0 group-hover:opacity-100 transition-opacity flex items-center justify-center">
       <div class="text-center">
