--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
        <!-- Portfolio Item -->
      <div class="portfolio-item weddings relative overflow-hidden rounded-lg group">
     <img src="r1.0.jpg" alt="Wedding Photography"
-         class="w-full aspect-[4/3] object-cover image-hover-effect filter grayscale">
+         class="w-full h-80 object-cover image-hover-effect filter grayscale">
     <div class="absolute inset-0 bg-black bg-opacity-50 opacity-0 group-hover:opacity-100 transition-opacity flex items-center justify-center">
       <div class="text-center">
         <h4 class="text-lg font-semibold mb-2">Romantic Wedding</h4>
