--- a/index.html
+++ b/index.html
@@ -422,19 +422,25 @@
       
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
         <!-- Contact Form -->
-        <div data-id="contact-form-container" class="fade-in">
-          <form data-id="contact-form" class="space-y-6">
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-              <input data-id="contact-name" type="text" placeholder="Your Name" class="w-full px-4 py-3 bg-gray-800 border border-gray-700 rounded-lg focus:outline-none focus:border-white transition-colors">
-              <input data-id="contact-email" type="email" placeholder="Your Email" class="w-full px-4 py-3 bg-gray-800 border border-gray-700 rounded-lg focus:outline-none focus:border-white transition-colors">
-            </div>
-            <input data-id="contact-subject" type="text" placeholder="Subject" class="w-full px-4 py-3 bg-gray-800 border border-gray-700 rounded-lg focus:outline-none focus:border-white transition-colors">
-            <textarea data-id="contact-message" placeholder="Your Message" rows="6" class="w-full px-4 py-3 bg-gray-800 border border-gray-700 rounded-lg focus:outline-none focus:border-white transition-colors resize-none"></textarea>
-            <button data-id="contact-submit" type="submit" class="w-full bg-white text-black py-3 rounded-lg font-semibold hover:bg-gray-200 transition-colors">
-              Send Message
-            </button>
-          </form>
-        </div>
+<div data-id="contact-form-container" class="fade-in">
+  <form action="https://formspree.io/f/mzzvwega" method="POST" class="space-y-6">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+      <input type="text" name="name" placeholder="Your Name" required
+        class="w-full px-4 py-3 bg-gray-800 border border-gray-700 rounded-lg focus:outline-none focus:border-white transition-colors">
+      <input type="email" name="email" placeholder="Your Email" required
+        class="w-full px-4 py-3 bg-gray-800 border border-gray-700 rounded-lg focus:outline-none focus:border-white transition-colors">
+    </div>
+    <input type="text" name="subject" placeholder="Subject" required
+      class="w-full px-4 py-3 bg-gray-800 border border-gray-700 rounded-lg focus:outline-none focus:border-white transition-colors">
+    <textarea name="message" placeholder="Your Message" rows="6" required
+      class="w-full px-4 py-3 bg-gray-800 border border-gray-700 rounded-lg focus:outline-none focus:border-white transition-colors resize-none"></textarea>
+    <button type="submit"
+      class="w-full bg-white text-black py-3 rounded-lg font-semibold hover:bg-gray-200 transition-colors">
+      Send Message
+    </button>
+  </form>
+</div>
+
         
         <!-- Contact Information -->
         <div data-id="contact-info" class="fade-in">
